--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "express-flash": "^0.0.2",
     "express-flash-message": "^3.0.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
