--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.14.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.9",
     "validator": "^13.15.0"
   }
